--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <title>Dashboard | Insightful</title>
   </head>
-  <body>
+  <body style="background-color: #DCDCDC;">
     <div id="app">
     </div>
     <script src="./index.tsx"></script>
